--- a/src/locales/it/city-management.json
+++ b/src/locales/it/city-management.json
@@ -1,50 +1,50 @@
 {
-  "menu": "City Management",
-  "description": "Manage and organize cities",
-  "addButton": "Add New City",
-  "searchPlaceholder": "Search...",
-  "loading": "Loading...",
-  "noData": "No data found",
+  "menu": "Gestione Città",
+  "description": "Gestisci e organizza le città",
+  "addButton": "Aggiungi Nuova Città",
+  "searchPlaceholder": "Cerca...",
+  "loading": "Caricamento...",
+  "noData": "Nessun dato trovato",
   "stats": {
-    "totalCities": "Total Cities",
-    "activeCities": "Active Cities",
-    "newThisMonth": "New This Month"
+    "totalCities": "Totale Città",
+    "activeCities": "Città Attive",
+    "newThisMonth": "Nuove Questo Mese"
   },
   "table": {
     "id": "ID",
-    "name": "City Name",
-    "erpCode": "ERP Code",
-    "countryName": "Country Name",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "name": "Nome Città",
+    "erpCode": "Codice ERP",
+    "countryName": "Nome Paese",
+    "createdDate": "Data Creazione",
+    "createdBy": "Creato Da",
+    "showing": "Visualizzazione {{from}}-{{to}} / {{total}}",
+    "page": "Pagina {{current}} / {{total}}"
   },
   "form": {
-    "editCity": "Edit City",
-    "addCity": "Add New City",
-    "editDescription": "Edit city details",
-    "addDescription": "Enter new city details",
-    "name": "City Name",
-    "namePlaceholder": "Enter city name",
-    "country": "Country",
-    "selectCountry": "Select country",
-    "erpCode": "ERP Code",
-    "erpCodePlaceholder": "Enter ERP code (optional)",
-    "cancel": "Cancel",
-    "save": "Save",
-    "saving": "Saving...",
-    "nameRequired": "City name is required",
-    "nameMaxLength": "City name can be at most 100 characters",
-    "erpCodeMaxLength": "ERP code can be at most 10 characters",
-    "countryRequired": "Country selection is required"
+    "editCity": "Modifica Città",
+    "addCity": "Aggiungi Nuova Città",
+    "editDescription": "Modifica dettagli città",
+    "addDescription": "Inserisci nuovi dettagli città",
+    "name": "Nome Città",
+    "namePlaceholder": "Inserisci nome città",
+    "country": "Paese",
+    "selectCountry": "Seleziona paese",
+    "erpCode": "Codice ERP",
+    "erpCodePlaceholder": "Inserisci codice ERP (opzionale)",
+    "cancel": "Annulla",
+    "save": "Salva",
+    "saving": "Salvataggio...",
+    "nameRequired": "Il nome della città è obbligatorio",
+    "nameMaxLength": "Il nome della città deve essere di massimo 100 caratteri",
+    "erpCodeMaxLength": "Il codice ERP deve essere di massimo 10 caratteri",
+    "countryRequired": "La selezione del paese è obbligatoria"
   },
-  "actions": "Actions",
+  "actions": "Azioni",
   "delete": {
-    "button": "Delete",
-    "confirmTitle": "Delete City",
-    "confirmMessage": "Are you sure you want to delete {{name}}?"
+    "button": "Elimina",
+    "confirmTitle": "Elimina Città",
+    "confirmMessage": "Sei sicuro di voler eliminare {{name}}?"
   },
-  "previous": "Previous",
-  "next": "Next"
+  "previous": "Precedente",
+  "next": "Successivo"
 }
