--- a/src/locales/it/contact-management.json
+++ b/src/locales/it/contact-management.json
@@ -1,77 +1,77 @@
 {
-  "menu": "Customer Contact Management",
-  "description": "Manage and edit customer contacts",
-  "addButton": "Add New Contact",
+  "menu": "Gestione Contatti Cliente",
+  "description": "Gestisci e modifica i contatti dei clienti",
+  "addButton": "Aggiungi Nuovo Contatto",
   "stats": {
-    "totalContacts": "Total Contacts",
-    "activeContacts": "Active Contacts",
-    "newThisMonth": "New This Month"
+    "totalContacts": "Totale Contatti",
+    "activeContacts": "Contatti Attivi",
+    "newThisMonth": "Nuovi Questo Mese"
   },
   "table": {
     "id": "ID",
-    "fullName": "Full Name",
+    "fullName": "Nome Completo",
     "email": "Email",
-    "phone": "Phone",
-    "mobile": "Mobile",
-    "notes": "Notes",
-    "customer": "Customer",
-    "title": "Title",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "updatedDate": "Updated Date",
-    "updatedBy": "Updated By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "phone": "Telefono",
+    "mobile": "Cellulare",
+    "notes": "Note",
+    "customer": "Cliente",
+    "title": "Titolo",
+    "createdDate": "Data Creazione",
+    "createdBy": "Creato Da",
+    "updatedDate": "Data Aggiornamento",
+    "updatedBy": "Aggiornato Da",
+    "showing": "Visualizzazione {{from}}-{{to}} / {{total}}",
+    "page": "Pagina {{current}} / {{total}}"
   },
   "form": {
-    "addContact": "Add New Contact",
-    "editContact": "Edit Contact",
-    "addDescription": "Enter new contact information",
-    "editDescription": "Edit contact information",
-    "fullName": "Full Name",
-    "fullNamePlaceholder": "Enter full name",
-    "fullNameRequired": "Full name is required",
-    "fullNameMaxLength": "Full name must be at most 100 characters",
+    "addContact": "Aggiungi Nuovo Contatto",
+    "editContact": "Modifica Contatto",
+    "addDescription": "Inserisci informazioni nuovo contatto",
+    "editDescription": "Modifica informazioni contatto",
+    "fullName": "Nome Completo",
+    "fullNamePlaceholder": "Inserisci nome completo",
+    "fullNameRequired": "Il nome completo è obbligatorio",
+    "fullNameMaxLength": "Il nome completo deve essere di massimo 100 caratteri",
     "email": "Email",
-    "emailPlaceholder": "Enter email address (optional)",
-    "emailInvalid": "Please enter a valid email address",
-    "emailMaxLength": "Email must be at most 100 characters",
-    "phone": "Phone",
-    "phonePlaceholder": "Enter phone number (optional)",
-    "phoneMaxLength": "Phone must be at most 20 characters",
-    "mobile": "Mobile",
-    "mobilePlaceholder": "Enter mobile phone number (optional)",
-    "mobileMaxLength": "Mobile must be at most 20 characters",
-    "notes": "Notes",
-    "notesPlaceholder": "Enter notes (optional)",
-    "notesMaxLength": "Notes must be at most 250 characters",
-    "customer": "Customer",
-    "selectCustomer": "Select customer",
-    "customerRequired": "Customer selection is required",
-    "title": "Title",
-    "selectTitle": "Select title",
-    "titleRequired": "Title selection is required"
+    "emailPlaceholder": "Inserisci indirizzo email (opzionale)",
+    "emailInvalid": "Inserisci un indirizzo email valido",
+    "emailMaxLength": "L'email deve essere di massimo 100 caratteri",
+    "phone": "Telefono",
+    "phonePlaceholder": "Inserisci numero di telefono (opzionale)",
+    "phoneMaxLength": "Il telefono deve essere di massimo 20 caratteri",
+    "mobile": "Cellulare",
+    "mobilePlaceholder": "Inserisci numero di cellulare (opzionale)",
+    "mobileMaxLength": "Il cellulare deve essere di massimo 20 caratteri",
+    "notes": "Note",
+    "notesPlaceholder": "Inserisci note (opzionale)",
+    "notesMaxLength": "Le note devono essere di massimo 250 caratteri",
+    "customer": "Cliente",
+    "selectCustomer": "Seleziona cliente",
+    "customerRequired": "La selezione del cliente è obbligatoria",
+    "title": "Titolo",
+    "selectTitle": "Seleziona titolo",
+    "titleRequired": "La selezione del titolo è obbligatoria"
   },
   "delete": {
-    "action": "Delete",
-    "confirmTitle": "Delete Contact",
-    "confirmMessage": "Are you sure you want to delete {{name}} contact?"
+    "action": "Elimina",
+    "confirmTitle": "Elimina Contatto",
+    "confirmMessage": "Sei sicuro di voler eliminare il contatto {{name}}?"
   },
-  "loading": "Loading...",
-  "noData": "No data",
-  "actions": "Actions",
-  "edit": "Edit",
-  "previous": "Previous",
-  "next": "Next",
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
+  "loading": "Caricamento...",
+  "noData": "Nessun dato",
+  "actions": "Azioni",
+  "edit": "Modifica",
+  "previous": "Precedente",
+  "next": "Successivo",
+  "cancel": "Annulla",
+  "save": "Salva",
+  "saving": "Salvataggio...",
   "messages": {
-    "createSuccess": "Contact created successfully",
-    "createError": "Contact could not be created",
-    "updateSuccess": "Contact updated successfully",
-    "updateError": "Contact could not be updated",
-    "deleteSuccess": "Contact deleted successfully",
-    "deleteError": "Contact could not be deleted"
+    "createSuccess": "Contatto creato con successo",
+    "createError": "Impossibile creare il contatto",
+    "updateSuccess": "Contatto aggiornato con successo",
+    "updateError": "Impossibile aggiornare il contatto",
+    "deleteSuccess": "Contatto eliminato con successo",
+    "deleteError": "Impossibile eliminare il contatto"
   }
 }
