--- a/src/locales/it/customer-management.json
+++ b/src/locales/it/customer-management.json
@@ -1,105 +1,102 @@
 {
-  "menu": "Customer Management",
-  "description": "Manage and edit customers",
-  "addButton": "Add New Customer",
+  "menu": "Gestione Clienti",
+  "description": "Gestisci e modifica clienti",
+  "addButton": "Aggiungi Nuovo Cliente",
   "stats": {
-    "totalCustomers": "Total Customers",
-    "approvedCustomers": "Approved Customers",
-    "newThisMonth": "New This Month"
+    "totalCustomers": "Totale Clienti",
+    "approvedCustomers": "Clienti Approvati",
+    "newThisMonth": "Nuovi Questo Mese"
   },
   "table": {
     "id": "ID",
-    "customerCode": "Customer Code",
-    "name": "Customer Name",
-    "customerType": "Customer Type",
-    "tcknNumber": "TCKN Number",
-    "country": "Country",
-    "city": "City",
-    "district": "District",
-    "phone": "Phone",
+    "customerCode": "Codice Cliente",
+    "name": "Nome Cliente",
+    "customerType": "Tipo Cliente",
+    "tcknNumber": "Codice Fiscale",
+    "country": "Paese",
+    "city": "Città",
+    "district": "Distretto",
+    "phone": "Telefono",
     "email": "Email",
-    "isApproved": "Approved",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "isApproved": "Approvato",
+    "createdDate": "Data Creazione",
+    "createdBy": "Creato Da",
+    "showing": "Visualizzazione {{from}}-{{to}} / {{total}}",
+    "page": "Pagina {{current}} / {{total}}"
   },
   "form": {
-    "addCustomer": "Add New Customer",
-    "editCustomer": "Edit Customer",
-    "addDescription": "Enter new customer information",
-    "editDescription": "Edit customer information",
-    "customerCode": "Customer Code",
-    "customerCodePlaceholder": "Enter customer code (optional)",
-    "customerCodeMaxLength": "Customer code must be at most 100 characters",
-    "name": "Customer Name",
-    "namePlaceholder": "Enter customer name",
-    "nameRequired": "Customer name is required",
-    "nameMaxLength": "Customer name must be at most 250 characters",
-    "taxNumber": "Tax Number",
-    "taxNumberPlaceholder": "Enter tax number (optional)",
-    "taxNumberMaxLength": "Tax number must be at most 15 characters",
-    "taxOffice": "Tax Office",
-    "taxOfficePlaceholder": "Enter tax office (optional)",
-    "taxOfficeMaxLength": "Tax office must be at most 100 characters",
-    "tcknNumber": "TCKN Number",
-    "tcknNumberPlaceholder": "Enter TCKN number (optional)",
-    "tcknNumberMaxLength": "TCKN number must be at most 20 characters",
-    "address": "Address",
-    "addressPlaceholder": "Enter address (optional)",
-    "addressMaxLength": "Address must be at most 500 characters",
-    "phone": "Phone",
-    "phonePlaceholder": "Enter phone number (optional)",
-    "phoneMaxLength": "Phone number must be at most 100 characters",
+    "addCustomer": "Aggiungi Nuovo Cliente",
+    "editCustomer": "Modifica Cliente",
+    "addDescription": "Inserisci nuove informazioni cliente",
+    "editDescription": "Modifica informazioni cliente",
+    "customerCode": "Codice Cliente",
+    "customerCodePlaceholder": "Inserisci codice cliente (opzionale)",
+    "customerCodeMaxLength": "Il codice cliente deve essere di massimo 100 caratteri",
+    "name": "Nome Cliente",
+    "namePlaceholder": "Inserisci nome cliente",
+    "nameRequired": "Il nome cliente è richiesto",
+    "nameMaxLength": "Il nome cliente deve essere di massimo 250 caratteri",
+    "taxNumber": "Partita IVA",
+    "taxNumberPlaceholder": "Inserisci partita IVA (opzionale)",
+    "taxNumberMaxLength": "La partita IVA deve essere di massimo 15 caratteri",
+    "taxOffice": "Ufficio Fiscale",
+    "taxOfficePlaceholder": "Inserisci ufficio fiscale (opzionale)",
+    "taxOfficeMaxLength": "L'ufficio fiscale deve essere di massimo 100 caratteri",
+    "tcknNumber": "Codice Fiscale",
+    "tcknNumberPlaceholder": "Inserisci codice fiscale (opzionale)",
+    "tcknNumberMaxLength": "Il codice fiscale deve essere di massimo 20 caratteri",
+    "address": "Indirizzo",
+    "addressPlaceholder": "Inserisci indirizzo (opzionale)",
+    "addressMaxLength": "L'indirizzo deve essere di massimo 500 caratteri",
+    "phone": "Telefono",
+    "phonePlaceholder": "Inserisci numero di telefono (opzionale)",
+    "phoneMaxLength": "Il numero di telefono deve essere di massimo 100 caratteri",
     "email": "Email",
-    "emailPlaceholder": "Enter email address (optional)",
-    "emailInvalid": "Please enter a valid email address",
-    "emailMaxLength": "Email address must be at most 100 characters",
-    "website": "Website",
-    "websitePlaceholder": "Enter website address (optional)",
-    "websiteMaxLength": "Website address must be at most 100 characters",
-    "notes": "Notes",
-    "notesPlaceholder": "Enter notes (optional)",
-    "notesMaxLength": "Notes must be at most 250 characters",
-    "country": "Country",
-    "selectCountry": "Select country",
-    "countryRequired": "Country selection is required",
-    "city": "City",
-    "selectCity": "Select city",
-    "cityRequired": "City selection is required",
-    "district": "District",
-    "selectDistrict": "Select district",
-    "districtRequired": "District selection is required",
-    "customerType": "Customer Type",
-    "selectCustomerType": "Select customer type",
-    "customerTypeRequired": "Customer type selection is required",
-    "erpCode": "ERP Code",
-    "erpCodePlaceholder": "Enter ERP code (optional)",
-    "erpCodeMaxLength": "ERP code must be at most 20 characters",
-    "isApproved": "Approved",
-    "isCompleted": "Completed",
-    "isERPIntegrated": "ERP Integrated"
+    "emailPlaceholder": "Inserisci indirizzo email (opzionale)",
+    "emailInvalid": "Inserisci un indirizzo email valido",
+    "emailMaxLength": "L'indirizzo email deve essere di massimo 100 caratteri",
+    "website": "Sito Web",
+    "websitePlaceholder": "Inserisci indirizzo sito web (opzionale)",
+    "websiteMaxLength": "L'indirizzo sito web deve essere di massimo 100 caratteri",
+    "notes": "Note",
+    "notesPlaceholder": "Inserisci note (opzionale)",
+    "notesMaxLength": "Le note devono essere di massimo 250 caratteri",
+    "country": "Paese",
+    "selectCountry": "Seleziona paese",
+    "countryRequired": "La selezione del paese è richiesta",
+    "city": "Città",
+    "selectCity": "Seleziona città",
+    "cityRequired": "La selezione della città è richiesta",
+    "district": "Distretto",
+    "selectDistrict": "Seleziona distretto",
+    "districtRequired": "La selezione del distretto è richiesta",
+    "customerType": "Tipo Cliente",
+    "selectCustomerType": "Seleziona tipo cliente",
+    "customerTypeRequired": "La selezione del tipo cliente è richiesta",
+    "erpCode": "Codice ERP",
+    "erpCodePlaceholder": "Inserisci codice ERP (opzionale)",
+    "erpCodeMaxLength": "Il codice ERP deve essere di massimo 20 caratteri",
+    "isApproved": "Approvato",
+    "isCompleted": "Completato",
+    "isERPIntegrated": "Integrato ERP"
   },
   "delete": {
-    "action": "Delete",
-    "confirmTitle": "Delete Customer",
-    "confirmMessage": "Are you sure you want to delete {{name}} customer?"
+    "action": "Elimina",
+    "confirmTitle": "Elimina Cliente",
+    "confirmMessage": "Sei sicuro di voler eliminare il cliente {{name}}?"
   },
-  "loading": "Loading...",
-  "noData": "No data",
-  "actions": "Actions",
-  "edit": "Edit",
-  "previous": "Previous",
-  "next": "Next",
-  "cancel": "Cancel",
-  "save": "Save",
-  "saving": "Saving...",
+  "loading": "Caricamento...",
+  "noData": "Nessun dato",
+  "actions": "Azioni",
+  "edit": "Modifica",
+  "previous": "Precedente",
+  "next": "Successivo",
+  "cancel": "Annulla",
+  "save": "Salva",
+  "saving": "Salvataggio...",
   "messages": {
-    "createSuccess": "Customer created successfully",
-    "createError": "Customer could not be created",
-    "updateSuccess": "Customer updated successfully",
-    "updateError": "Customer could not be updated",
-    "deleteSuccess": "Customer deleted successfully",
-    "deleteError": "Customer could not be deleted"
+    "createSuccess": "Cliente creato con successo",
+    "createError": "Impossibile creare il cliente",
+    "updateSuccess": "Cliente aggiornato con successo"
   }
 }
