--- a/src/locales/it/customer-type-management.json
+++ b/src/locales/it/customer-type-management.json
@@ -1,56 +1,56 @@
 {
-  "menu": "Customer Type Management",
-  "description": "Manage and edit customer types",
-  "addButton": "Add New Customer Type",
-  "loading": "Loading...",
-  "noData": "No data found",
-  "actions": "Actions",
-  "previous": "Previous",
-  "next": "Next",
+  "menu": "Gestione Tipi Cliente",
+  "description": "Gestisci e modifica i tipi di cliente",
+  "addButton": "Aggiungi Nuovo Tipo Cliente",
+  "loading": "Caricamento...",
+  "noData": "Nessun dato trovato",
+  "actions": "Azioni",
+  "previous": "Precedente",
+  "next": "Successivo",
   "stats": {
-    "totalCustomerTypes": "Total Customer Types",
-    "activeCustomerTypes": "Active Customer Types",
-    "newThisMonth": "New This Month"
+    "totalCustomerTypes": "Totale Tipi Cliente",
+    "activeCustomerTypes": "Tipi Cliente Attivi",
+    "newThisMonth": "Nuovi Questo Mese"
   },
   "table": {
     "id": "ID",
-    "name": "Customer Type Name",
-    "description": "Description",
-    "createdDate": "Created Date",
-    "createdBy": "Created By",
-    "updatedDate": "Updated Date",
-    "updatedBy": "Updated By",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}"
+    "name": "Nome Tipo Cliente",
+    "description": "Descrizione",
+    "createdDate": "Data Creazione",
+    "createdBy": "Creato Da",
+    "updatedDate": "Data Aggiornamento",
+    "updatedBy": "Aggiornato Da",
+    "showing": "Visualizzazione {{from}}-{{to}} / {{total}}",
+    "page": "Pagina {{current}} / {{total}}"
   },
   "form": {
-    "addCustomerType": "Add New Customer Type",
-    "editCustomerType": "Edit Customer Type",
-    "addDescription": "Enter new customer type information",
-    "editDescription": "Edit customer type information",
-    "name": "Customer Type Name",
-    "namePlaceholder": "Enter customer type name",
-    "nameRequired": "Customer type name is required",
-    "nameMaxLength": "Customer type name must be at most 100 characters",
-    "description": "Description",
-    "descriptionPlaceholder": "Enter description (optional)",
-    "descriptionMaxLength": "Description must be at most 500 characters",
-    "cancel": "Cancel",
-    "save": "Save",
-    "saving": "Saving..."
+    "addCustomerType": "Aggiungi Nuovo Tipo Cliente",
+    "editCustomerType": "Modifica Tipo Cliente",
+    "addDescription": "Inserisci informazioni nuovo tipo cliente",
+    "editDescription": "Modifica informazioni tipo cliente",
+    "name": "Nome Tipo Cliente",
+    "namePlaceholder": "Inserisci nome tipo cliente",
+    "nameRequired": "Il nome del tipo cliente è obbligatorio",
+    "nameMaxLength": "Il nome del tipo cliente deve essere di massimo 100 caratteri",
+    "description": "Descrizione",
+    "descriptionPlaceholder": "Inserisci descrizione (opzionale)",
+    "descriptionMaxLength": "La descrizione deve essere di massimo 500 caratteri",
+    "cancel": "Annulla",
+    "save": "Salva",
+    "saving": "Salvataggio..."
   },
   "delete": {
-    "confirmTitle": "Delete Customer Type",
-    "confirmMessage": "Are you sure you want to delete {{name}} customer type?",
-    "confirmButton": "Delete",
-    "deleting": "Deleting..."
+    "confirmTitle": "Elimina Tipo Cliente",
+    "confirmMessage": "Sei sicuro di voler eliminare il tipo cliente {{name}}?",
+    "confirmButton": "Elimina",
+    "deleting": "Eliminazione..."
   },
   "messages": {
-    "createSuccess": "Customer type created successfully",
-    "createError": "Customer type could not be created",
-    "updateSuccess": "Customer type updated successfully",
-    "updateError": "Customer type could not be updated",
-    "deleteSuccess": "Customer type deleted successfully",
-    "deleteError": "Customer type could not be deleted"
+    "createSuccess": "Tipo cliente creato con successo",
+    "createError": "Impossibile creare il tipo cliente",
+    "updateSuccess": "Tipo cliente aggiornato con successo",
+    "updateError": "Impossibile aggiornare il tipo cliente",
+    "deleteSuccess": "Tipo cliente eliminato con successo",
+    "deleteError": "Impossibile eliminare il tipo cliente"
   }
 }
