--- a/src/locales/it/activity-management.json
+++ b/src/locales/it/activity-management.json
@@ -1,140 +1,101 @@
 {
-  "title": "Activity Management",
-  "description": "Manage and edit activities",
-  "create": "New Activity",
-  "createDescription": "Enter new activity information",
-  "edit": "Edit Activity",
-  "editButton": "Edit",
-  "editDescription": "Edit activity information",
-  "delete": "Delete",
-  "deleteTitle": "Delete Activity",
-  "subject": "Subject",
-  "activityType": "Activity Type",
-  "potentialCustomerId": "Potential Customer",
-  "potentialCustomer": "Customer",
-  "customer": "Customer",
-  "selectCustomer": "Select Customer",
-  "erpCustomerCode": "ERP Customer Code",
-  "product": "Stock/Product",
-  "selectProduct": "Select Stock/Product",
-  "status": "Status",
-  "isCompleted": "Completed",
-  "priority": "Priority",
-  "contactId": "Contact",
-  "contact": "Contact",
-  "assignedUserId": "Assigned User",
-  "assignedUser": "Assigned To",
-  "activityDate": "Activity Date",
-  "activityDateRequired": "Activity date is required",
-  "createdDate": "Created Date",
-  "updatedDate": "Updated Date",
-  "actions": "Actions",
-  "search": "Search",
-  "filterByActivityType": "Filter by Activity Type",
-  "filterByStatus": "Filter by Status",
-  "filterByPriority": "Filter by Priority",
-  "filterByPotentialCustomer": "Filter by Customer",
-  "filterByContact": "Filter by Contact",
-  "filterByAssignedUser": "Filter by Assigned User",
-  "filterByIsCompleted": "Filter by Completion Status",
-  "filterByCreatedDateRange": "Filter by Created Date Range",
-  "noData": "No data found",
-  "confirmDelete": "Are you sure you want to delete this activity?",
-  "createSuccess": "Activity created successfully",
-  "updateSuccess": "Activity updated successfully",
-  "deleteSuccess": "Activity deleted successfully",
-  "createError": "An error occurred while creating activity",
-  "updateError": "An error occurred while updating activity",
-  "deleteError": "An error occurred while deleting activity",
-  "subjectRequired": "Subject is required",
-  "subjectMaxLength": "Subject must be at most 100 characters",
-  "descriptionMaxLength": "Description must be at most 500 characters",
-  "activityTypeRequired": "Activity type selection is required",
-  "activityTypeMaxLength": "Activity type must be at most 50 characters",
-  "statusRequired": "Status selection is required",
-  "statusMaxLength": "Status must be at most 50 characters",
-  "priorityMaxLength": "Priority must be at most 50 characters",
-  "enterSubject": "Enter Subject",
-  "enterDescription": "Enter Description (Optional)",
-  "selectActivityType": "Select Activity Type",
-  "selectPotentialCustomer": "Select Potential Customer (Optional)",
-  "enterErpCustomerCode": "Enter ERP Customer Code (Optional)",
-  "selectStatus": "Select Status",
-  "selectPriority": "Select Priority (Optional)",
-  "selectContact": "Select Contact (Optional)",
-  "selectAssignedUser": "Select Assigned User (Optional)",
-  "noCustomerSelected": "No customer selected",
-  "noContactSelected": "No contact selected",
-  "noUserSelected": "No user selected",
-  "noPrioritySelected": "No priority selected",
-  "selectCustomerFirst": "Select customer first",
-  "loading": "Loading...",
-  "save": "Save",
-  "saving": "Saving...",
-  "cancel": "Cancel",
-  "previous": "Previous",
-  "next": "Next",
+  "title": "Gestione Attività",
+  "description": "Gestisci e modifica le attività",
+  "create": "Nuova Attività",
+  "createDescription": "Inserisci le informazioni della nuova attività",
+  "edit": "Modifica Attività",
+  "editButton": "Modifica",
+  "editDescription": "Modifica le informazioni dell'attività",
+  "delete": "Elimina",
+  "deleteTitle": "Elimina Attività",
+  "subject": "Oggetto",
+  "activityType": "Tipo Attività",
+  "potentialCustomerId": "Cliente Potenziale",
+  "potentialCustomer": "Cliente",
+  "customer": "Cliente",
+  "selectCustomer": "Seleziona Cliente",
+  "erpCustomerCode": "Codice Cliente ERP",
+  "product": "Stock/Prodotto",
+  "selectProduct": "Seleziona Stock/Prodotto",
+  "status": "Stato",
+  "isCompleted": "Completato",
+  "priority": "Priorità",
+  "contactId": "Contatto",
+  "contact": "Contatto",
+  "assignedUserId": "Utente Assegnato",
+  "assignedUser": "Assegnato A",
+  "activityDate": "Data Attività",
+  "activityDateRequired": "La data dell'attività è obbligatoria",
+  "createdDate": "Data Creazione",
+  "updatedDate": "Data Aggiornamento",
+  "actions": "Azioni",
+  "search": "Cerca",
+  "filterByActivityType": "Filtra per Tipo Attività",
+  "filterByStatus": "Filtra per Stato",
+  "filterByPriority": "Filtra per Priorità",
+  "filterByPotentialCustomer": "Filtra per Cliente",
+  "filterByContact": "Filtra per Contatto",
+  "filterByAssignedUser": "Filtra per Utente Assegnato",
+  "filterByIsCompleted": "Filtra per Stato Completamento",
+  "filterByCreatedDateRange": "Filtra per Intervallo Data Creazione",
+  "noData": "Nessun dato trovato",
+  "confirmDelete": "Sei sicuro di voler eliminare questa attività?",
+  "createSuccess": "Attività creata con successo",
+  "updateSuccess": "Attività aggiornata con successo",
+  "deleteSuccess": "Attività eliminata con successo",
+  "createError": "Si è verificato un errore durante la creazione dell'attività",
+  "updateError": "Si è verificato un errore durante l'aggiornamento dell'attività",
+  "deleteError": "Si è verificato un errore durante l'eliminazione dell'attività",
+  "subjectRequired": "L'oggetto è obbligatorio",
+  "subjectMaxLength": "L'oggetto deve essere di massimo 100 caratteri",
+  "descriptionMaxLength": "La descrizione deve essere di massimo 500 caratteri",
+  "activityTypeRequired": "La selezione del tipo di attività è obbligatoria",
+  "activityTypeMaxLength": "Il tipo di attività deve essere di massimo 50 caratteri",
+  "statusRequired": "La selezione dello stato è obbligatoria",
+  "statusMaxLength": "Lo stato deve essere di massimo 50 caratteri",
+  "priorityMaxLength": "La priorità deve essere di massimo 50 caratteri",
+  "enterSubject": "Inserisci Oggetto",
+  "enterDescription": "Inserisci Descrizione (Opzionale)",
+  "selectActivityType": "Seleziona Tipo Attività",
+  "selectPotentialCustomer": "Seleziona Cliente Potenziale (Opzionale)",
+  "enterErpCustomerCode": "Inserisci Codice Cliente ERP (Opzionale)",
+  "selectStatus": "Seleziona Stato",
+  "selectPriority": "Seleziona Priorità (Opzionale)",
+  "selectContact": "Seleziona Contatto (Opzionale)",
+  "selectAssignedUser": "Seleziona Utente Assegnato (Opzionale)",
+  "noCustomerSelected": "Nessun cliente selezionato",
+  "noContactSelected": "Nessun contatto selezionato",
+  "noUserSelected": "Nessun utente selezionato",
+  "noPrioritySelected": "Nessuna priorità selezionata",
+  "selectCustomerFirst": "Seleziona prima il cliente",
+  "loading": "Caricamento...",
+  "save": "Salva",
+  "saving": "Salvataggio...",
+  "cancel": "Annulla",
+  "previous": "Precedente",
+  "next": "Successivo",
   "productDisplay": "{{code}} - {{name}}",
   "erpLabel": "ERP: {{code}}",
-  "close": "Close",
-  "clearFilters": "Clear Filters",
-  "applyFilters": "Apply Filters",
-  "markAsCompleted": "Mark as Completed",
-  "markAsInProgress": "Mark as In Progress",
-  "cancelActivity": "Cancel",
-  "confirmMarkAsCompleted": "Are you sure you want to mark this activity as completed?",
-  "confirmMarkAsInProgress": "Are you sure you want to mark this activity as in progress?",
-  "confirmCancel": "Are you sure you want to cancel this activity?",
-  "markAsCompletedSuccess": "Activity marked as completed",
-  "markAsInProgressSuccess": "Activity marked as in progress",
-  "cancelSuccess": "Activity canceled",
-  "statusChangeWarning": "Are you sure you want to change the status?",
-  "autoCompleteStatus": "Will be automatically marked when status is set to 'Completed'",
-  "activityTypeCall": "Call",
-  "activityTypeMeeting": "Meeting",
+  "close": "Chiudi",
+  "clearFilters": "Cancella Filtri",
+  "applyFilters": "Applica Filtri",
+  "markAsCompleted": "Segna come Completato",
+  "markAsInProgress": "Segna come In Corso",
+  "cancelActivity": "Annulla",
+  "confirmMarkAsCompleted": "Sei sicuro di voler segnare questa attività come completata?",
+  "confirmMarkAsInProgress": "Sei sicuro di voler segnare questa attività come in corso?",
+  "confirmCancel": "Sei sicuro di voler annullare questa attività?",
+  "markAsCompletedSuccess": "Attività segnata come completata",
+  "markAsInProgressSuccess": "Attività segnata come in corso",
+  "cancelSuccess": "Attività annullata",
+  "statusChangeWarning": "Sei sicuro di voler cambiare lo stato?",
+  "autoCompleteStatus": "Verrà automaticamente segnato quando lo stato è impostato su 'Completato'",
+  "activityTypeCall": "Chiamata",
+  "activityTypeMeeting": "Riunione",
   "activityTypeEmail": "Email",
-  "activityTypeTask": "Task",
-  "activityTypeNote": "Note",
-  "activityTypeEvent": "Event",
-  "statusScheduled": "Scheduled",
-  "statusInProgress": "In Progress",
-  "statusCompleted": "Completed",
-  "statusCanceled": "Canceled",
-  "statusPostponed": "Postponed",
-  "priorityLow": "Low",
-  "priorityMedium": "Medium",
-  "priorityHigh": "High",
-  "allActivityTypes": "All Activity Types",
-  "allStatuses": "All Statuses",
-  "allPriorities": "All Priorities",
-  "completedActivities": "Completed Activities",
-  "pendingActivities": "Pending Activities",
-  "highPriorityActivities": "High Priority Activities",
-  "noCompletedActivities": "No completed activities found",
-  "noPendingActivities": "No pending activities found",
-  "activityDetails": "Activity Details",
-  "customerInformation": "Customer Information",
-  "contactInformation": "Contact Information",
-  "assignedUserInformation": "Assigned User Information",
-  "calendarView": "Calendar View",
-  "kanbanView": "Kanban View",
-  "tableView": "Table View",
-  "switchToCalendar": "Switch to Calendar View",
-  "switchToKanban": "Switch to Kanban View",
-  "switchToTable": "Switch to Table View",
-  "table": {
-    "id": "ID",
-    "subject": "Subject",
-    "activityType": "Activity Type",
-    "status": "Status",
-    "priority": "Priority",
-    "potentialCustomer": "Customer",
-    "contact": "Contact",
-    "assignedUser": "Assigned To",
-    "isCompleted": "Completed",
-    "createdDate": "Created Date",
-    "updatedDate": "Updated Date",
-    "showing": "Showing {{from}}-{{to}} of {{total}}",
-    "page": "Page {{current}} of {{total}}"
-  }
+  "activityTypeTask": "Compito",
+  "activityTypeNote": "Nota",
+  "activityTypeEvent": "Evento",
+  "statusScheduled": "Pianificato",
+  "statusInProgress": "In Corso"
 }
