--- a/src/locales/it/auth.json
+++ b/src/locales/it/auth.json
@@ -1,46 +1,46 @@
 {
   "auth": {
     "login": {
-      "title": "Sales & Customer Management",
-      "slogan": "\"Manage your business with <1>v3rii</1>, not with guesses.\"",
-      "branchPlaceholder": "Select Branch",
-      "emailPlaceholder": "Corporate Email",
+      "title": "Gestione Vendite e Clienti",
+      "slogan": "\"Gestisci la tua attività con <1>v3rii</1>, non con ipotesi.\"",
+      "branchPlaceholder": "Seleziona Filiale",
+      "emailPlaceholder": "Email Aziendale",
       "passwordPlaceholder": "Password",
-      "rememberMe": "Remember Me",
-      "forgotPassword": "Forgot Password?",
-      "submitButton": "Login",
-      "processing": "Processing...",
-      "sessionExpired": "Your session has expired. Please login again."
+      "rememberMe": "Ricordami",
+      "forgotPassword": "Password Dimenticata?",
+      "submitButton": "Accedi",
+      "processing": "Elaborazione...",
+      "sessionExpired": "La tua sessione è scaduta. Per favore, accedi di nuovo."
     },
     "forgotPassword": {
-      "title": "Forgot Password",
-      "description": "Enter your email address to reset your password. We will send you a password reset link.",
-      "emailPlaceholder": "Email Address",
-      "submitButton": "Send Password Reset Request",
-      "backToLogin": "Back to Login",
-      "processing": "Processing..."
+      "title": "Password Dimenticata",
+      "description": "Inserisci il tuo indirizzo email per reimpostare la password. Ti invieremo un link per la reimpostazione.",
+      "emailPlaceholder": "Indirizzo Email",
+      "submitButton": "Invia Richiesta di Reimpostazione",
+      "backToLogin": "Torna al Login",
+      "processing": "Elaborazione..."
     },
     "resetPassword": {
-      "title": "Reset Password",
-      "newPasswordPlaceholder": "New Password",
-      "confirmPasswordPlaceholder": "Confirm Password",
-      "submitButton": "Reset Password",
-      "processing": "Processing...",
-      "invalidToken": "Invalid or missing token. Please check the password reset link again.",
-      "tokenNotFound": "Token not found"
+      "title": "Reimposta Password",
+      "newPasswordPlaceholder": "Nuova Password",
+      "confirmPasswordPlaceholder": "Conferma Password",
+      "submitButton": "Reimposta Password",
+      "processing": "Elaborazione...",
+      "invalidToken": "Token non valido o mancante. Controlla nuovamente il link di reimpostazione password.",
+      "tokenNotFound": "Token non trovato"
     },
     "validation": {
-      "emailInvalid": "Please enter a valid email address",
-      "passwordRequired": "Password is required",
-      "branchRequired": "Branch selection is required",
-      "passwordMinLength": "Password must be at least 8 characters",
-      "tokenRequired": "Token is required",
-      "newPasswordMinLength": "Password must be at least 6 characters",
-      "confirmPasswordRequired": "Confirm password is required",
-      "passwordsMismatch": "Passwords do not match",
-      "currentPasswordRequired": "Current password is required",
-      "newPasswordMaxLength": "New password must be at most 100 characters",
-      "newPasswordSameAsCurrent": "New password cannot be the same as current password"
+      "emailInvalid": "Inserisci un indirizzo email valido",
+      "passwordRequired": "La password è richiesta",
+      "branchRequired": "La selezione della filiale è richiesta",
+      "passwordMinLength": "La password deve essere di almeno 8 caratteri",
+      "tokenRequired": "Il token è richiesto",
+      "newPasswordMinLength": "La password deve essere di almeno 6 caratteri",
+      "confirmPasswordRequired": "La conferma della password è richiesta",
+      "passwordsMismatch": "Le password non corrispondono",
+      "currentPasswordRequired": "La password attuale è richiesta",
+      "newPasswordMaxLength": "La nuova password deve essere di massimo 100 caratteri",
+      "newPasswordSameAsCurrent": "La nuova password non può essere uguale a quella attuale"
     }
   }
 }
