--- a/src/locales/it/user-management.json
+++ b/src/locales/it/user-management.json
@@ -1,62 +1,62 @@
 {
-  "menu": "User Management",
-  "description": "Manage and edit users",
-  "addButton": "Add New User",
+  "menu": "Gestione Utenti",
+  "description": "Gestisci e modifica utenti",
+  "addButton": "Aggiungi Nuovo Utente",
   "table": {
     "id": "ID",
-    "username": "Username",
+    "username": "Nome Utente",
     "email": "Email",
-    "fullName": "Full Name",
-    "role": "Role",
-    "status": "Status",
-    "createdDate": "Created Date",
-    "active": "Active",
-    "inactive": "Inactive",
-    "confirmed": "Confirmed",
-    "showing": "Showing {{from}}-{{to}} / {{total}}",
-    "page": "Page {{current}} / {{total}}",
-    "actions": "Actions",
-    "noData": "No data",
-    "loading": "Loading...",
-    "previous": "Previous",
-    "next": "Next",
-    "edit": "Edit",
-    "delete": "Delete"
+    "fullName": "Nome Completo",
+    "role": "Ruolo",
+    "status": "Stato",
+    "createdDate": "Data Creazione",
+    "active": "Attivo",
+    "inactive": "Inattivo",
+    "confirmed": "Confermato",
+    "showing": "Visualizzazione {{from}}-{{to}} / {{total}}",
+    "page": "Pagina {{current}} / {{total}}",
+    "actions": "Azioni",
+    "noData": "Nessun dato",
+    "loading": "Caricamento...",
+    "previous": "Precedente",
+    "next": "Successivo",
+    "edit": "Modifica",
+    "delete": "Elimina"
   },
   "form": {
-    "editUser": "Edit User",
-    "addUser": "Add New User",
-    "editDescription": "Edit user information",
-    "addDescription": "Enter new user information",
-    "username": "Username",
-    "usernamePlaceholder": "Enter username",
+    "editUser": "Modifica Utente",
+    "addUser": "Aggiungi Nuovo Utente",
+    "editDescription": "Modifica informazioni utente",
+    "addDescription": "Inserisci nuove informazioni utente",
+    "username": "Nome Utente",
+    "usernamePlaceholder": "Inserisci nome utente",
     "email": "Email",
-    "emailPlaceholder": "Enter email address",
+    "emailPlaceholder": "Inserisci indirizzo email",
     "password": "Password",
-    "passwordPlaceholder": "Enter password (min 8 chars)",
-    "firstName": "First Name",
-    "firstNamePlaceholder": "Enter first name",
-    "lastName": "Last Name",
-    "lastNamePlaceholder": "Enter last name",
-    "phoneNumber": "Phone Number",
-    "phoneNumberPlaceholder": "Enter phone number",
-    "role": "Role",
-    "rolePlaceholder": "Enter role",
-    "isActive": "Active",
-    "isActiveDescription": "User active status",
-    "save": "Save",
-    "saving": "Saving...",
-    "cancel": "Cancel"
+    "passwordPlaceholder": "Inserisci password (min 8 car)",
+    "firstName": "Nome",
+    "firstNamePlaceholder": "Inserisci nome",
+    "lastName": "Cognome",
+    "lastNamePlaceholder": "Inserisci cognome",
+    "phoneNumber": "Numero di Telefono",
+    "phoneNumberPlaceholder": "Inserisci numero di telefono",
+    "role": "Ruolo",
+    "rolePlaceholder": "Inserisci ruolo",
+    "isActive": "Attivo",
+    "isActiveDescription": "Stato attivo utente",
+    "save": "Salva",
+    "saving": "Salvataggio...",
+    "cancel": "Annulla"
   },
   "stats": {
-    "totalUsers": "Total Users",
-    "activeUsers": "Active Users",
-    "newThisMonth": "New This Month",
-    "confirmedUsers": "Confirmed Users",
-    "loading": "Loading..."
+    "totalUsers": "Totale Utenti",
+    "activeUsers": "Utenti Attivi",
+    "newThisMonth": "Nuovi Questo Mese",
+    "confirmedUsers": "Utenti Confermati",
+    "loading": "Caricamento..."
   },
   "delete": {
-    "confirmTitle": "Delete User",
-    "confirmMessage": "Are you sure you want to delete user {{username}}?"
+    "confirmTitle": "Elimina Utente",
+    "confirmMessage": "Sei sicuro di voler eliminare l'utente {{username}}?"
   }
 }
